Fixed Some Missing Labels

--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -378,6 +378,8 @@
         "ImportFBX.desc": "Import a FBX model (.fbx)",
         "ImportVRM.label": "VRM",
         "ImportVRM.desc": "Import a VRM model (.vrm)",
+        "Importer.export_resonite.label": "Export For Resonite",
+        "Importer.export_resonite.desc": "Export For Resonite",
         "InstallXPS.label": "XPS Tools is not installed or enabled!",
         "InstallSource.label": "Source Tools is not installed or enabled!",
         "InstallVRM.label": "VRM Importer is not installed or enabled!",
@@ -398,7 +400,7 @@
         "VrmToolsButton.URL_2.8": "https://github.com/saturday06/VRM_IMPORTER_for_Blender2_8",
         "VrmToolsButton.success": "VRM Importer link opened",
         "ExportModel.label": "Export Model",
-        "ExportModel.desc": "Export this model as .fbx for Unity.\n\nAutomatically sets the optimal export settings",
+        "ExportModel.desc": "Export this model to a supported format",
         "ExportModel.error.notEnabled": "FBX Exporter not enabled! Please enable it in your User Preferences.",
         "ErrorDisplay.label": "Warning:",
         "ErrorDisplay.polygons1": "Too many polygons!",
