--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -19,7 +19,7 @@
         "QuickAccess.warn.oldBlender2": "Some features might not work!",
         "QuickAccess.warn.oldBlender3": "Please update to Blender 3.6!",
         "QuickAccess.warn.noDict1": "Dictionary not found!",
-        "QuickAccess.warn.noDict2": "Translations will work, but are not optimized.",
+        "QuickAccess.warn.noDict2": "Translations will work but are not optimized.",
         "QuickAccess.warn.noDict3": "Reinstall Cats to fix this.",
         "QuickAccess.ImportAnyModel.label": "Import Model",
         "QuickAccess.JoinMeshes.label": "Join all meshes",
@@ -28,12 +28,12 @@
         "MMDOptions.RemoveRigidBodiesManaulInfo1": "This will remove Rigid Bodies and Joint",
         "MMDOptions.RemoveRigidBodiesManaulInfo2": "Which are not needed for VRChat",
         "FixMaterialsButton.label": "Fix Materials",
-        "FixMaterialsButton.desc": "This will apply some vrchat related fixes to materials\n\n- You shouldn't use this if your model has already \nbeen set up for Unity.\n- Don't use this if your materials go black, though \nalot of issues has been fixed when it comes to materials\nthere maybe some left.",
+        "FixMaterialsButton.desc": "This will apply some vrchat related fixes to materials\n\n- You shouldn't use this if your model has already \nbeen set up for Unity.\n- Don't use this if your materials go black, though \na lot of issues have been fixed when it comes to materials\nthere may be some left.",
         "ModelSettings.label": "Fix Model Settings",
         "ModelSettings.warn.fbtFix1": "The Full Body Tracking Fix",
         "ModelSettings.warn.fbtFix2": "is no longer needed for VRChat.",
         "ModelSettings.warn.fbtFix3": "It's still available in Legacy Features.",
-        "cats_twist.tutorial_button.label": "Twist Bones Tutotial",
+        "cats_twist.tutorial_button.label": "Twist Bones Tutorial",
         "OtherOptionsPanel.label": "Other Options",
         "OtherOptionsPanel.separateBy": "Separate by:",
         "OtherOptionsPanel.SeparateByMaterials.label": "Materials",
@@ -168,7 +168,7 @@
         "CreditsPanel.desc4": "Special thanks to:",
         "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, 989onan, triazo, Mysteryem",
         "CreditsPanel.descContributors2": "Shotariya and Neitri",
-        "CreditsPanel.desc5": "Unoffical Maintainers - Yusarina and 989onan",
+        "CreditsPanel.desc5": "Unoffical Maintainer - Yusarina",
         "CreditsPanel.desc6": "Do you need help or found a bug?",
         "FixArmature.label": "Fix MMD Model",
         "FixArmature.desc": "WARNING: DO NOT USE THIS UNLESS YOU ARE\nIMPORTING A NEW MMD MODEL, DO NOT USE \nTHIS FOR MODELS ALREADY SET UP FOR \nUNITY AND VRCHAT!\n\nAutomatically:\n- Reparents bones\n- Removes unnecessary bones, objects, groups & constraints\n- Translates and renames bones & objects\n- Merges weight paints\n- Corrects the hips\n- Converts morphs into shapes",
@@ -179,7 +179,7 @@
         "FixArmature.fixedSuccess": "Model successfully fixed.",
         "FixArmature.bonesNotFound": "The following bones were not found:",
         "FixArmature.cantFix1": "Looks like you found a model which Cats could not fix!",
-        "FixArmature.cantFix2": "If this is a non modified model we would love to make it compatible.",
+        "FixArmature.cantFix2": "If this is a non-modified model we would love to make it compatible.",
         "FixArmature.cantFix3": "Report it to us in the forum or in our discord, links can be found in the Credits panel.",
         "FixArmature.notParent": " is not parented at all, this will cause problems!",
         "FixArmature.notParentTo1": " is not parented to ",
@@ -214,7 +214,7 @@
         "SeparateByLooseParts.desc": "Separates selected mesh by loose parts.\nThis acts like separating by materials but creates more meshes for more precision",
         "SeparateByLooseParts.success": "Successfully separated by loose parts.",
         "SeparateByShapekeys.label": "Separate by Shape Keys",
-        "SeparateByShapekeys.desc": "Separates selected mesh into two parts,\ndepending on whether it is effected by a shape key or not.\n\nVery useful for manual decimation",
+        "SeparateByShapekeys.desc": "Separates selected mesh into two parts,\ndepending on whether it is affected by a shape key or not.\n\nVery useful for manual decimation",
         "SeparateByShapekeys.success": "Successfully separated by shape keys.",
         "SeparateByX.error.noMesh": "No meshes found!",
         "SeparateByX.error.multipleMesh": "Multiple meshes found!\nPlease select the mesh you want to separate!",
@@ -247,7 +247,7 @@
         "FlipNormals.desc": "Flips the direction of the faces' normals of the selected mesh.\nUse this if all normals are inverted",
         "FlipNormals.success": "Flipped all normals.",
         "RemoveDoubles.label": "Remove Doubles",
-        "RemoveDoubles.desc": "Merges duplicated faces and vertices of the selected meshes.\nThis is more safe than doing it manually:\n  - leaves shape keys completely untouched\n  - but removes less doubles overall",
+        "RemoveDoubles.desc": "Merges duplicated faces and vertices of the selected meshes.\nThis is safer than doing it manually:\n  - leaves shape keys completely untouched\n  - but removes less doubles overall",
         "RemoveDoubles.success": "Removed {number} vertices.",
         "RemoveDoublesNormal.label": "Remove Doubles Normally",
         "RemoveDoublesNormal.desc": "Merges duplicated faces and vertices of the selected meshes.\nThis is exactly like doing it manually",
@@ -320,16 +320,16 @@
         "ForumButton.URL": "https://vrcat.club/threads/cats-blender-plugin.6/",
         "ForumButton.success": "Forum opened.",
         "HelpButton.label": "Need Help?",
-        "HelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki",
+        "HelpButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki",
         "HelpButton.success": "Github wiki opened.",
         "LegacyReadButton.label": "Legacy features wiki",
-        "LegacyReadButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Legacy-Features",
+        "LegacyReadButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki/Legacy-Features",
         "LegacyReadButton.success": "Github wiki opened.",
         "MMDOptionswiki.label": "MMD Options Wiki",
-        "MMDOptionswiki.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Features#mmd-options",
+        "MMDOptionswiki.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki/Features#mmd-options",
         "MMDOptionswiki.success": "Github wiki opened.",
         "PatchnotesButton.label": "Latest Patchnotes",
-        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
+        "PatchnotesButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/releases",
         "PatchnotesButton.success": "Patchnotes opened.",
         "ScanButton.label": "Scan for decimation models",
         "ScanButton.desc": "Separates the mesh.",
@@ -359,17 +359,17 @@
         "ImportAnyModel.error.emptyZip": "The selected zip file contains no importable models.",
         "ImportAnyModel.desc2.8": "Import a model of any supported type.\n\nSupported types:\n- MMD: .pmx/.pmd\n- XNALara: .xps/.mesh/.ascii\n- Source: .smd/.qc/.vta/.dmx\n- VRM: .vrm\n- FBX: .fbx\n- DAE: .dae \n- ZIP: .zip",
         "DecimationLegacy.info1": "Decimation will be removed in",
-        "DecimationLegacy.info2": "Blender 3.1 please use Tuxdo",
+        "DecimationLegacy.info2": "Blender 4.1 please use Tuxedo",
         "DecimationLegacy.info3": "Blender Plugin instead!",
         "DecimationMoved1.info1": "Decimation has been moved to",
         "DecimationMoved1.info2": "to legacy features please start",
         "DecimationMoved1.info3": "using tuxedo instead as this is",
-        "DecimationMoved1.info4": "an obslolete system in cats",
+        "DecimationMoved1.info4": "an obsolete system in cats",
         "LegacyDecimationButton.label": "Get Tuxedo!",
         "LegacyDecimationButton.URL": "https://github.com/feilen/tuxedo-blender-plugin/releases",
         "DecimationHelpButton.success": "Opened Wiki",
         "DecimationHelpButton.label": "Decimation Wiki",
-        "DecimationHelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Decimation",
+        "DecimationHelpButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki/Decimation",
         "ImportAnyModel.error.unsupportedFBX": "The FBX file version is unsupported!\nPlease use a tool such as the \"Autodesk FBX Converter\" to make it compatible.",
         "ZipPopup.label": "Zip Model Selection:",
         "ZipPopup.desc": "Shows the models contained in the zip files",
@@ -520,7 +520,7 @@
         "update_dictionary.error.catsTranslated": "\nCats translated what it could with the local dictionary, but you will have to try again later for the Google translations.",
         "update_dictionary.error.cantAccess": "Cats was not able to access Google Translate!",
         "update_dictionary.error.errorMsg": "You got an error message from Google Translate!",
-        "update_dictionary.error.apiChanged": "Could not get translations from Google Translate!\nThis means that Google changed their API and translations will no longer work until this is fixed.\nPlease translate manually or wait for an CATS update.\nFor updates and dicussions please join our Discord. The link can be found in the Credits panel down below.",
+        "update_dictionary.error.apiChanged": "Could not get translations from Google Translate!\nThis means that Google changed their API and translations will no longer work until this is fixed.\nPlease translate manually or wait for a CATS update.\nFor updates and discussions please join our Discord. The link can be found in the Credits panel down below.",
         "AutoVisemeButton.label": "Create Visemes",
         "AutoVisemeButton.desc": "This will give your avatar the ability to mimic each sound that comes from your mouth by blending between various shapes to mimic your actual voice.\nIt will generate 15 shape keys from the 3 shape keys you specify",
         "AutoVisemeButton.error.noShapekeys": "This mesh has no shapekeys!",
@@ -575,7 +575,7 @@
         "Scene.keep_twist_bones.label": "Keep Twist Bones",
         "Scene.keep_twist_bones.desc": "This will keep any bone with \"Twist\" in the name.\nSo if there are certain bones that you want to keep, you can add \"Twist\" to them and they won't get deleted.\n\nVRChat can now make use of twist bones, so you can use this option to keep them",
         "Scene.fix_twist_bones.label": "Fix MMD Twist Bones",
-        "Scene.fix_twist_bones.desc": "This will make MMD arm twist bones usable in VRChat.\nWIll only work if the twist bones are properly named.\nRequired names:\n  - ArmTwist[1-3]_[L/R]\n  - HandTwist[1-3]_[L/R]\n\nYou don't need to enable \"Keep Twist Bones\" for this to work",
+        "Scene.fix_twist_bones.desc": "This will make MMD arm twist bones usable in VRChat.\nWill only work if the twist bones are properly named.\nRequired names:\n  - ArmTwist[1-3]_[L/R]\n  - HandTwist[1-3]_[L/R]\n\nYou don't need to enable \"Keep Twist Bones\" for this to work",
         "Scene.join_meshes.label": "Join Meshes",
         "Scene.join_meshes.desc": "Joins all meshes of this model together.\nIt also:\n  - Applies all transformations\n  - Repairs broken armature modifiers\n  - Applies all decimation and mirror modifiers\n  - Merges UV maps correctly\n\nINFO: You should always join your meshes",
         "Scene.connect_bones.label": "Connect Bones",
@@ -748,7 +748,7 @@
         "bpy.types.Scene.cats_update_action.ignore.label": "Ignore this version",
         "bpy.types.Scene.cats_update_action.ignore.desc": "This ignores this version. You will be reminded again when the next version releases",
         "bpy.types.Scene.cats_update_action.defer.label": "Remind me later",
-        "bpy.types.Scene.cats_update_action.defer.desc": "Hides the update notification til the next Blender restart",
+        "bpy.types.Scene.cats_update_action.defer.desc": "Hides the update notification until the next Blender restart",
         "DecimationPanel.preset.excellent.label": "Excellent",
         "DecimationPanel.preset.excellent.description": "The maximum number of tris you can have for an Excellent rating.",
         "DecimationPanel.preset.good.label": "Good",
