--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -168,7 +168,7 @@
         "CreditsPanel.desc4": "Special thanks to:",
         "CreditsPanel.descContributors": "Feilen, Jordo, Ruubick, 989onan, triazo, Mysteryem",
         "CreditsPanel.descContributors2": "Shotariya and Neitri",
-        "CreditsPanel.desc5": "Unoffical Maintainer - Yusarina",
+        "CreditsPanel.desc5": "Unoffical Maintainers - Yusarina and 989onan",
         "CreditsPanel.desc6": "Do you need help or found a bug?",
         "FixArmature.label": "Fix MMD Model",
         "FixArmature.desc": "WARNING: DO NOT USE THIS UNLESS YOU ARE\nIMPORTING A NEW MMD MODEL, DO NOT USE \nTHIS FOR MODELS ALREADY SET UP FOR \nUNITY AND VRCHAT!\n\nAutomatically:\n- Reparents bones\n- Removes unnecessary bones, objects, groups & constraints\n- Translates and renames bones & objects\n- Merges weight paints\n- Corrects the hips\n- Converts morphs into shapes",
@@ -320,16 +320,16 @@
         "ForumButton.URL": "https://vrcat.club/threads/cats-blender-plugin.6/",
         "ForumButton.success": "Forum opened.",
         "HelpButton.label": "Need Help?",
-        "HelpButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki",
+        "HelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki",
         "HelpButton.success": "Github wiki opened.",
         "LegacyReadButton.label": "Legacy features wiki",
-        "LegacyReadButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki/Legacy-Features",
+        "LegacyReadButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Legacy-Features",
         "LegacyReadButton.success": "Github wiki opened.",
         "MMDOptionswiki.label": "MMD Options Wiki",
-        "MMDOptionswiki.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki/Features#mmd-options",
+        "MMDOptionswiki.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Features#mmd-options",
         "MMDOptionswiki.success": "Github wiki opened.",
         "PatchnotesButton.label": "Latest Patchnotes",
-        "PatchnotesButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/releases",
+        "PatchnotesButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/releases",
         "PatchnotesButton.success": "Patchnotes opened.",
         "ScanButton.label": "Scan for decimation models",
         "ScanButton.desc": "Separates the mesh.",
@@ -369,7 +369,7 @@
         "LegacyDecimationButton.URL": "https://github.com/feilen/tuxedo-blender-plugin/releases",
         "DecimationHelpButton.success": "Opened Wiki",
         "DecimationHelpButton.label": "Decimation Wiki",
-        "DecimationHelpButton.URL": "https://github.com/Yusarina/Cats-Blender-Plugin-Unofficial-/wiki/Decimation",
+        "DecimationHelpButton.URL": "https://github.com/teamneoneko/Cats-Blender-Plugin-Unofficial-/wiki/Decimation",
         "ImportAnyModel.error.unsupportedFBX": "The FBX file version is unsupported!\nPlease use a tool such as the \"Autodesk FBX Converter\" to make it compatible.",
         "ZipPopup.label": "Zip Model Selection:",
         "ZipPopup.desc": "Shows the models contained in the zip files",
