Added shapekey pruner

--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -483,7 +483,12 @@
         "ShapeKeyApplier.error.recursiveRelativeToLoop": "Shapekey \"{name}\" is recursively relative to itself, so cannot be applied to the Basis",
         "ShapeKeyApplier.successRemoved": "Successfully removed shapekey \"{name}\" from the Basis.",
         "ShapeKeyApplier.successSet": "Successfully applied shapekey \"{name}\" to the Basis.",
+        "ShapeKeyPruner.label": "Remove Unused Shapekeys",
+        "ShapeKeyPruner.desc": "Removes unused shapekeys that don't affect the mesh",
+        "ShapeKeyPruner.removedPrefix": "Removed:",
+        "ShapeKeyPruner.nothingRemoved": "No shapekeys were removed.",
         "addToShapekeyMenu.ShapeKeyApplier.label": "Apply Selected Shapekey to Basis",
+        "addToShapekeyMenu.ShapeKeyPruner.label": "Remove Unused Shapekeys",
         "TranslateShapekeyButton.label": "Translate Shape Keys",
         "TranslateShapekeyButton.desc": "Translates all shape keys using the internal dictionary and Google Translate into English",
         "TranslateShapekeyButton.success": "Translated {number} shape keys.",
