--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -212,6 +212,10 @@
         "SeparateByShapekeys.desc": "選択したメッシュを 2 つの部分に分離します。\nシェイプキーに影響を与えるかどうかに応じて。\n\n手動デシメーションに非常に便利",
         "SeparateByShapekeys.success": "シェイプキー別に分離されました。",
         "SeparateByX.error.noMesh": "メッシュが見つかりません！",
+        "ShapeKeyPruner.label": "未使用のシェイプキーを削除する",
+        "ShapeKeyPruner.desc": "メッシュに影響を与えない未使用のシェイプキーを削除します。使用する前にメッシュを選択する必要があります。",
+        "ShapeKeyPruner.removedPrefix": "削除:",
+        "ShapeKeyPruner.nothingRemoved": "シェイプキーは削除されませんでした。",
         "SeparateByX.error.multipleMesh": "複数のメッシュが見つかりました！\n分離するメッシュを選択してください！",
         "SeparateByX.warn.noSeparation": "分離する必要のあるメッシュはありませんでした！",
         "MergeWeights.label": "親に重みをマージする",
