--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -223,6 +223,10 @@
         "SeparateByShapekeys.label": "쉐이프키별로 분리하기",
         "SeparateByShapekeys.desc": "선택된 메쉬를 두 부분으로 나누는데,\n쉐이프키에 의해 영향을 받는지 여부에 따라 결정됩니다.\n\n수동으로 데시메이션을 할 시 매우 유용합니다",
         "SeparateByShapekeys.success": "성공적으로 쉐이프키별로 분리됐습니다.",
+        "ShapeKeyPruner.label": "사용하지 않는 Shapekeys 제거",
+        "ShapeKeyPruner.desc": "메시에 영향을 미치지 않는 사용되지 않는 셰이프키를 제거합니다. 사용하기 전에 메시를 선택해야 합니다.",
+        "ShapeKeyPruner.removedPrefix": "제거됨:",
+        "ShapeKeyPruner.nothingRemoved": "셰이프키가 제거되지 않았습니다.",
         "SeparateByX.error.noMesh": "메쉬가 발견되지 않음!",
         "SeparateByX.error.multipleMesh": "여러 메쉬들이 발견됨!\n나누고 싶은 메쉬를 선택해주세요!",
         "SeparateByX.warn.noSeparation": "메쉬를 분리 할 필요가 없습니다!",
