--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -12,7 +12,10 @@
         "QuickAccess.label": "빠른 접근",
         "QuickAccess.warn.newBlender1": "지원되지 않는 Blender 버전이 감지되었습니다!",
         "QuickAccess.warn.newBlender2": "일부 기능이 작동하지 않을 수 있습니다",
-        "QuickAccess.warn.newBlender3": "Blender 4.2까지 지원됩니다. 4.2 버전은 GitHub에서 확인하세요.",
+        "QuickAccess.warn.newBlender3": "Blender 4.3까지 지원됩니다. 4.3 버전은 GitHub에서 확인하세요.",
+        "QuickAccess.warn.Alpha1": "이 Blender 및 Cats 버전은 초기 알파 버전입니다.",
+        "QuickAccess.warn.Alpha2": "문제가 발생할 경우 알려주시기 바랍니다.",
+        "QuickAccess.warn.Alpha3": "Blender의 안정적인 버전으로 다운그레이드하세요.",
         "QuickAccess.warn.oldBlender1": "이전 블렌더 버전이 발견되었습니다!",
         "QuickAccess.warn.oldBlender2": "일부 기능이 작동하지 않을 수 있습니다!",
         "QuickAccess.warn.oldBlender3": "블렌더 4.2 버전으로 업데이트하세요!",
