Added warning if mesh isn't single user when trying to join them.

--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -706,6 +706,10 @@
         "DebugTranslations.error": "Errors found, response printed!!",
         "ShowPatchnotesPanel.desc": "Shows the patchnotes of the selected version",
         "JoinMeshes.failure": "Meshes could not be joined!",
+        "JoinMeshes.error.not_single_user": "オブジェクト/メッシュがシングルユーザーではない",
+        "JoinMeshes.error.make_single_user": "このオプションを使用する前に、この操作を行ってください",
+        "JoinMeshes.error.make_single_user1": "すべてのオブジェクト/ Mehsesを選択してから実行します",
+        "JoinMeshes.error.make_single_user2": "オブジェクト>リレーション > Make Single User",  
         "ScalingPanel.imscaleNotInstalled2": "Download and install it manually:",
         "InstallShotariya.error.install3": "Please download and install it manually:",
         "Scene.head.desc": "The head bone containing the eye bones",
