--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -189,6 +189,10 @@
         "JoinMeshesSelected.error.noSelect": "선택된 메쉬들이 없습니다! 합치고 싶은 메쉬들을 계층(Hierarchy) 창에서 선택해주세요!",
         "JoinMeshesSelected.error.cantJoin": "선택된 메쉬들이 통합될 수 없었습니다!",
         "JoinMeshesSelected.success": "선택된 메쉬들이 통합됐습니다.",
+        "JoinMeshes.error.not_single_user": "개체/메시가 단일 사용자가 아닙니다.",
+        "JoinMeshes.error.make_single_user": "이 옵션을 사용하기 전에 이 작업을 수행하십시오",
+        "JoinMeshes.error.make_single_user1": "모든 Objest / Mehses를 선택한 다음 다음을 수행하십시오.",
+        "JoinMeshes.error.make_single_user2": "객체 > 관계 > 단일 사용자 만들기",  
         "SeparateByMaterials.label": "매테리얼별로 분리하기",
         "SeparateByMaterials.desc": "선택된 메쉬를 매테리얼 별로 나눕니다.\n\n경고: 나중에 쉐이프키가 필요한 것들은 절대 데시메이트하지 마십시오. (얼굴, 입, 눈 등..)",
         "SeparateByMaterials.success": "성공적으로 매테리얼별로 분리됐습니다.",
