Bringing in-line with Blender 3.6 dev
Added single user check to Fix MMd Model and Join Meshes.
Added Join Mehses checkbox which somehow got yeeted from Fix MMD Model.

--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -207,6 +207,10 @@
         "JoinMeshesSelected.error.noSelect": "No meshes selected! Please select the meshes you want to join in the hierarchy!",
         "JoinMeshesSelected.error.cantJoin": "Selected meshes could not be joined!",
         "JoinMeshesSelected.success": "Selected meshes joined.",
+        "JoinMeshes.error.not_single_user": "Your Objects/ Meshes are not Single User",
+        "JoinMeshes.error.make_single_user": "Please do this before using this option",
+        "JoinMeshes.error.make_single_user1": "Select all Objest/ Mehses then do",
+        "JoinMeshes.error.make_single_user2": "Object > Relations > Make Single User", 
         "SeparateByMaterials.label": "Separate by Materials",
         "SeparateByMaterials.desc": "Separates selected mesh by materials.\n\nWarning: Never decimate something where you might need the shape keys later (face, mouth, eyes..)",
         "SeparateByMaterials.success": "Successfully separated by materials.",
