--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -387,6 +387,10 @@
         "StopTestingButton.error.tryAgain": "何かがうまくいかなかった。もう一度アイテストを試してみてください。",
         "TranslateX.error.wrongVersion": "この関数には、Blender 2.79以上が必要です。",
         "JoinMeshes.desc": "このモデルのすべてのメッシュを一緒に結合します。\nまた：\n- すべてのシェイプキーを正しく再配置します\n- すべての変換を適用します\n- 壊れたアーマチュア修飾子を修理します\n- すべてのデシメーションおよびミラー修飾子を適用します\n-UVマップを正しくマージします",
+        "JoinMeshes.error.not_single_user": "オブジェクト/メッシュがシングルユーザーではない",
+        "JoinMeshes.error.make_single_user": "このオプションを使用する前に、この操作を行ってください",
+        "JoinMeshes.error.make_single_user1": "すべてのオブジェクト/ Mehsesを選択してから実行します",
+        "JoinMeshes.error.make_single_user2": "オブジェクト>リレーション > Make Single User",
         "ErrorDisplay.brokenShapekeys3": "これらのShapeKeysを修正するまで、このモデルをアップロードすることはできません。",
         "Scene.head.desc": "目の骨を含む頭の骨",
         "UpdateCompletePanel.desc": "更新が完了しました",
