Add warning popup to MMD model.
- Added warning to MMD Model to ensure the user knows not to use it if there are not using a MMD Model and to ensure there imported the model via the cats importer.

--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -172,6 +172,11 @@
         "CreditsPanel.desc6": "Do you need help or found a bug?",
         "FixArmature.label": "Fix MMD Model",
         "FixArmature.desc": "WARNING: DO NOT USE THIS UNLESS YOU ARE\nIMPORTING A NEW MMD MODEL, DO NOT USE \nTHIS FOR MODELS ALREADY SET UP FOR \nUNITY AND VRCHAT!\n\nAutomatically:\n- Reparents bones\n- Removes unnecessary bones, objects, groups & constraints\n- Translates and renames bones & objects\n- Merges weight paints\n- Corrects the hips\n- Converts morphs into shapes",
+        "FixArmature.warning.line1": "Please note: This function is only for models not set up for Unity,",
+        "FixArmature.warning.line2": "such as MMD models. Do not use on Booth or Gumroad models, as it",
+        "FixArmature.warning.line3": "will break them.",
+        "FixArmature.warning.line4": "Ensure you've imported the model via the Cats importer. If not,",
+        "FixArmature.warning.line5": "please re-import using the Cats importer, or blender will crash.",
         "FixArmature.error.noMesh": "No mesh inside the armature found!\nIf there are meshes outside of the armature,\nset the armature as the parent of the meshes.",
         "FixArmature.error.faultyUV1": "The model was successfully fixed, but there were {uvcoord} faulty UV coordinates.",
         "FixArmature.error.faultyUV2": "This could result in broken textures and you might have to fix them manually.",
