Added end of life warning

--- a/resources/translations/ja_JP.json
+++ b/resources/translations/ja_JP.json
@@ -14,6 +14,13 @@
         "QuickAccess.ImportAnyModel.label": "モデルのインポート",
         "QuickAccess.JoinMeshes.label": "すべてのメッシュを結合する",
         "QuickAccess.CombineMats.label": "材料を組み合わせる",
+        "QuickAccess.warn.eol1": "Blender 4.1用のCATSは",
+        "QuickAccess.warn.eol2": "サポート終了が近づいています。",
+        "QuickAccess.warn.eol3": "2024年8月16日以降、",
+        "QuickAccess.warn.eol4": "Blender 4.1用のCATSは",
+        "QuickAccess.warn.eol5": "更新を受け取らなくなります。",
+        "QuickAccess.warn.eol6": "更新を継続して受け取るには、",
+        "QuickAccess.warn.eol7": "Blender 4.2にアップグレードしてください。",
         "mmdoptions.FixMaterialsButton.label": "固定材料",
         "MMDOptions.RemoveRigidBodiesManaulInfo1": "この操作はリジッドボディとジョイントを削除します",
         "MMDOptions.RemoveRigidBodiesManaulInfo2": "VRChatで不要なものです",
