--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -18,6 +18,13 @@
         "QuickAccess.warn.oldBlender1": "Old Blender version detected!",
         "QuickAccess.warn.oldBlender2": "Some features might not work!",
         "QuickAccess.warn.oldBlender3": "Please update to Blender 4.1!",
+        "QuickAccess.warn.eol1": "CATS for Blender 4.1 is.",
+        "QuickAccess.warn.eol2": "approaching end of life.",
+        "QuickAccess.warn.eol3": "From 16/08/2024 CATS for",
+        "QuickAccess.warn.eol4": "Blender 4.1 will no longer ", 
+        "QuickAccess.warn.eol5": "receive updates. Please",
+        "QuickAccess.warn.eol6": "upgrade to Blender 4.2. to",
+        "QuickAccess.warn.eol7": "continue receiving updates.",
         "QuickAccess.warn.noDict1": "Dictionary not found!",
         "QuickAccess.warn.noDict2": "Translations will work but are not optimized.",
         "QuickAccess.warn.noDict3": "Reinstall Cats to fix this.",
