--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -19,11 +19,11 @@
         "QuickAccess.warn.oldBlender2": "Some features might not work!",
         "QuickAccess.warn.oldBlender3": "Please update to Blender 4.1!",
         "QuickAccess.warn.eol1": "CATS for Blender 4.1 is.",
-        "QuickAccess.warn.eol2": "approaching end of life.",
-        "QuickAccess.warn.eol3": "From 16/08/2024 CATS for",
-        "QuickAccess.warn.eol4": "Blender 4.1 will no longer ", 
-        "QuickAccess.warn.eol5": "receive updates. Please",
-        "QuickAccess.warn.eol6": "upgrade to Blender 4.2. to",
+        "QuickAccess.warn.eol2": "now end of life and will",
+        "QuickAccess.warn.eol3": "no longer receive updates.",
+        "QuickAccess.warn.eol4": "Please upgrade to the ", 
+        "QuickAccess.warn.eol5": "latest supported blender",
+        "QuickAccess.warn.eol6": "version which cats supports",
         "QuickAccess.warn.eol7": "continue receiving updates.",
         "QuickAccess.warn.noDict1": "Dictionary not found!",
         "QuickAccess.warn.noDict2": "Translations will work but are not optimized.",
