--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -19,13 +19,13 @@
         "QuickAccess.ImportAnyModel.label": "모델 불러오기",
         "QuickAccess.JoinMeshes.label": "모든 메쉬에 합류",
         "QuickAccess.CombineMats.label": "재료 결합",
-        "QuickAccess.warn.eol1": "Blender 4.1용 CATS가",
-        "QuickAccess.warn.eol2": "수명 종료에 가까워지고 있습니다.",
-        "QuickAccess.warn.eol3": "2024년 8월 16일부터",
-        "QuickAccess.warn.eol4": "Blender 4.1용 CATS는",
-        "QuickAccess.warn.eol5": "더 이상 업데이트를 받지 않습니다.",
-        "QuickAccess.warn.eol6": "계속해서 업데이트를 받으려면",
-        "QuickAccess.warn.eol7": "Blender 4.2로 업그레이드하세요.",
+        "QuickAccess.warn.eol1": "Blender 4.1용 CATS는",
+        "QuickAccess.warn.eol2": "지원이 종료되어",
+        "QuickAccess.warn.eol3": "더 이상 업데이트되지 않습니다.",
+        "QuickAccess.warn.eol4": "CATS가 지원하는",
+        "QuickAccess.warn.eol5": "최신 Blender 버전으로",
+        "QuickAccess.warn.eol6": "업그레이드하여",
+        "QuickAccess.warn.eol7": "계속 업데이트를 받으세요.",
         "mmdoptions.FixMaterialsButton.label": "재료 수정",
         "MMDOptions.RemoveRigidBodiesManaulInfo1": "이 작업은 리ジッドボディ와 관계를 제거합니다.",
         "MMDOptions.RemoveRigidBodiesManaulInfo2": "VRChat에서 필요하지 않은 것입니다.",
