--- a/resources/translations/en_US.json
+++ b/resources/translations/en_US.json
@@ -7,20 +7,20 @@
         "Main.error.installViaPreferences": "\n\nFaulty CATS installation found!\nPlease install CATS via User Preferences and restart Blender!\n",
         "Main.error.restartAndEnable": "\n\nFaulty CATS installation was found and fixed!\nPlease restart Blender and enable CATS again!\n",
         "Main.error.29unsupportedVersion": "\n\nBlender versions older than 3.6 are not supported by Cats.\nPlease use Blender 3.6 or later.\n",
-        "Main.error.40unsupportedVersion": "\n\nBlender 4.0 is not supported by this version of cats.\nPlease use Blender 4.1, you can download a 4.1 version on my github.\n",
+        "Main.error.40unsupportedVersion": "\n\nBlender version is not supported by this version of cats.\nPlease use Blender 4.4, you can download a 4.4 version on my github.\n",
         "Main.error.restartAndEnable_alt": "\n\nPlease restart Blender and enable CATS again!\n",
         "ToolPanel.label": "Cats Blender Plugin",
         "ToolPanel.category": "CATS",
         "QuickAccess.label": "Quick Access",
         "QuickAccess.warn.newBlender1": "Potentially unsupported Blender version detected!",
         "QuickAccess.warn.newBlender2": "Some features might not work",
-        "QuickAccess.warn.newBlender3": "supports up to Blender 4.3 see github for the 4.3 one.",
+        "QuickAccess.warn.newBlender3": "supports up to Blender 4.4 see github for the 4.4 one.",
         "QuickAccess.warn.Alpha1": "This version of Blender and Cats is in Early Alpha",
         "QuickAccess.warn.Alpha2": "There will be issues, if you run into any please",
         "QuickAccess.warn.Alpha3": "Downgrade to a stable version of Blender.",
         "QuickAccess.warn.oldBlender1": "Old Blender version detected!",
         "QuickAccess.warn.oldBlender2": "Some features might not work!",
-        "QuickAccess.warn.oldBlender3": "Please update to Blender 4.2!",
+        "QuickAccess.warn.oldBlender3": "Please update to Blender 4.4!",
         "QuickAccess.warn.noDict1": "Dictionary not found!",
         "QuickAccess.warn.noDict2": "Translations will work but are not optimized.",
         "QuickAccess.warn.noDict3": "Reinstall Cats to fix this.",
