Fixed Missing Strings

--- a/resources/translations/ko_KR.json
+++ b/resources/translations/ko_KR.json
@@ -769,6 +769,31 @@
         "AdjustEyesButton.error.noVertex": "뼈 \"{bone}\"에는 기존 정점 그룹이 없거나 정점이 할당되지 않았습니다.\n잘못된 메쉬 나 잘못된 뼈를 선택했기 때문일 수 있습니다.\n또한 눈 추적을 만들기 전에 메쉬를 결합하고 눈 뼈가 실제로 포즈 모드에서 눈을 움직여야합니다.",
         "AddShapeButton.desc": "선택한 모양 키를 화이트리스트에 추가합니다.\n이것은 해당 모양 키를 포함하는 모든 메쉬가 소멸되지 않음을 의미합니다.",
         "ShowError.label": "보고서 : 오류",
-        "ImportAnyModel.importantInfo.desc": "가져 오기 설정을 수정하려면 가져 오기 버튼 옆의 버튼을 사용하십시오."
+        "ImportAnyModel.importantInfo.desc": "가져 오기 설정을 수정하려면 가져 오기 버튼 옆의 버튼을 사용하십시오.",
+        "FixFBTButton.label": "풀 바디 트래킹 수정 추가",
+        "FixFBTButton.desc": "추가 다리 본을 생성하여 모델에 풀 바디 트래킹 수정을 추가합니다",
+        "RemoveFBTButton.label": "풀 바디 트래킹 수정 제거",
+        "RemoveFBTButton.desc": "풀 바디 트래킹 수정으로 추가된 다리 본을 제거합니다",
+        "LoadBonesButton.label": "루트 본 불러오기",
+        "LoadBonesButton.desc": "부모-자식 관계를 설정할 수 있는 본 목록을 불러옵니다",
+        "Importer.export_resonite.label": "Resonite용 내보내기",
+        "Importer.export_resonite.desc": "이 모델을 Resonite에서 사용하기 위해 내보냅니다",
+        "VisemePreviewOperator.label": "입 모양 미리보기",
+        "VisemePreviewOperator.desc": "게임 내 입 모양이 어떻게 보일지 미리봅니다",
+        "FixArmature.description": "아마추어를 자동으로 수정:\n- 본 계층 구조 재설정\n- 불필요한 본 제거\n- 본 이름 번역\n- 가중치 병합\n- 힙 본 수정\n- 모프를 쉐이프 키로 변환",
+        "Scene.eye_tracking_mode.label": "시선 추적 모드",
+        "Scene.eye_tracking_mode.desc": "사용할 시선 추적 시스템 선택",
+        "Scene.eye_tracking_mode.sdk3.label": "VRChat SDK3",
+        "Scene.eye_tracking_mode.sdk3.desc": "VRChat SDK3용 시선 추적 설정",
+        "Scene.eye_tracking_mode.legacy.label": "레거시",
+        "Scene.eye_tracking_mode.legacy.desc": "다른 플랫폼용 레거시 시선 추적 시스템",
+        "Scene.viseme_preview_mode.label": "미리보기 모드",
+        "Scene.viseme_preview_mode.desc": "입 모양 쉐이프 미리보기 모드 활성화",
+        "Scene.viseme_preview_selection.label": "미리보기 쉐이프",
+        "Scene.viseme_preview_selection.desc": "미리볼 입 모양 쉐이프 선택",
+        "Scene.viseme_validate_deformation.label": "변형 검증",
+        "Scene.viseme_validate_deformation.desc": "쉐이프 키 변형이 적절한 범위 내인지 확인",
+        "Scene.remove_doubles_threshold.label": "임계값",
+        "Scene.remove_doubles_threshold.desc": "중복 정점을 제거할 거리 임계값"
     }
 }
